--- a/src/static/css/pages/_resume.scss
+++ b/src/static/css/pages/_resume.scss
@@ -7,6 +7,11 @@
 		top: -4.5em;
 	}
 
+	.link-container {
+		margin-top: 2em;
+		text-align: center;
+	}
+
 	.link-container h4 {
 		text-decoration:none;
 		border-bottom: none;
