update about me page

--- a/src/static/css/components/_post.scss
+++ b/src/static/css/components/_post.scss
@@ -6,6 +6,14 @@
 
 /* Post */
 
+	.post.link-hover-uppercase {
+		a:hover {
+			text-decoration: none;
+			text-transform: uppercase;
+			font-weight: bold;
+		}
+	}
+
 	.post {
 		@include padding(_size(section-spacing), _size(section-spacing));
 		background: _palette(bg);
